@@ -2456,9 +2456,9 @@ static void do_recapture(F_CMD_ARGS, Bool fSingle)
   }
   MyXGrabServer(dpy);
   if (fSingle)
-    CaptureOneWindow(tmp_win, tmp_win->w, None, None);
+    CaptureOneWindow(tmp_win, tmp_win->w, None, None, True);
   else
-    CaptureAllWindows();
+    CaptureAllWindows(True);
   /* Throw away queued up events. We don't want user input during a
    * recapture. The window the user clicks in might disapper at the very same
    * moment and the click goes through to the root window. Not good */
